# video-analyser

./: .env.example  CONTRIBUTING.md  README.md  README_LOCAL.md  README_REFACTORED.md  check_dependencies.py  config.py  list_gemini_models.py  list_ollama_models.py  ollama_client.py  pyproject.toml  requirements.txt  run_anthropic.py  run_anthropic.sh  run_gemini.py  run_local.bat  run_local.py  run_local.sh  setup.py  setup_ollama.py  setup_ollama_models.py  test_config.py  test_litellm_ollama.py  test_ollama_model.py  test_ollama_response.py  test_ollama_response_format.py  utils.py  video_analysis.py
docs/: api.md  architecture.md
docs/examples/: simple.md  workflow.md
docs/tutorials/: advanced_usage.md  basic_usage.md
scripts/: run_local.py  run_local.sh  run_local_refactored.py  run_refactored.bat  run_refactored.sh  run_smolavision.py  setup_ollama_models.py
smolavision/: exceptions.py
smolavision/analysis/: __init__.py  summarization.py  types.py  utils.py  vision.py
smolavision/batch/: __init__.py  creator.py  types.py  utils.py
smolavision/cli/: __init__.py  commands.py  main.py  parser.py  utils.py
smolavision/config/: __init__.py  loader.py  schema.py  validation.py
smolavision/logging/: __init__.py  setup.py
smolavision/models/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  huggingface.py  ollama.py  openai.py
smolavision/ocr/: __init__.py  extractor.py  languages.py  types.py
smolavision/output/: __init__.py  flowchart.py  formatter.py  types.py  writer.py
smolavision/pipeline/: __init__.py  base.py  factory.py  run.py  segmented.py  standard.py
smolavision/tools/: __init__.py  base.py  batch_creation.py  factory.py  frame_extraction.py  ocr_extraction.py  summarization.py  vision_analysis.py
smolavision/utils/: __init__.py  dependency_checker.py  file_utils.py  formatting.py  ollama_setup.py
smolavision/video/: __init__.py  base.py  extractor.py  scene_detection.py  types.py  utils.py
tests/integration/: conftest.py  test_cli.py  test_pipeline.py
tests/unit/: conftest.py  test_batch_creator.py  test_models.py  test_ocr_extractor.py  test_ollama_response_format.py  test_tools.py  test_video_extractor.py
tools/: __init__.py  batch_creation.py  frame_extraction.py  ocr_extraction.py  summarization.py  vision_analysis.py
